Add feature flag for discoveredAtImage field for vulns graphQL response (#6976)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2852,6 +2852,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true      
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - checkout
@@ -3130,6 +3131,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: false
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - checkout
@@ -3199,6 +3201,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - run-qa-tests:
@@ -3226,6 +3229,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - checkout
@@ -3258,6 +3262,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - run-qa-tests:
@@ -3291,6 +3296,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - run-qa-tests:
@@ -3828,6 +3834,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - run-openshift-tests:
@@ -3852,6 +3859,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - run-openshift-tests:
@@ -3873,6 +3881,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
       - checkout
