ROX-5811 - Add additional CAs to tls-challenge response (#6866)
ROX-5811 - Add additional CAs to tls-challenge response

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2850,7 +2850,8 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
-      - ROX_NETWORK_DETECTION: true      
+      - ROX_SENSOR_TLS_CHALLENGE: true
+      - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
 
@@ -3129,6 +3130,7 @@ jobs:
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: false
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
@@ -3201,6 +3203,7 @@ jobs:
       - ROX_SYSLOG_INTEGRATION: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_DISCOVERED_AT_IMAGE: true
 
     steps:
@@ -3230,6 +3233,7 @@ jobs:
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
 
     steps:
       - checkout
@@ -3260,6 +3264,7 @@ jobs:
       - ROX_NETWORK_GRAPH_PORTS: true
       - ROX_NETWORK_GRAPH_EXTERNAL_SRCS: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
@@ -3294,6 +3299,7 @@ jobs:
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - OUTPUT_FORMAT: helm
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
@@ -3832,6 +3838,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
@@ -3857,6 +3864,7 @@ jobs:
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_CENTRAL_INSTALLATION_EXPERIENCE: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
@@ -3879,6 +3887,7 @@ jobs:
       - ADMISSION_CONTROLLER: true
       - ADMISSION_CONTROLLER_UPDATES: true
       - ROX_SYSLOG_INTEGRATION: true
+      - ROX_SENSOR_TLS_CHALLENGE: true
       - ROX_NETWORK_DETECTION: true
       - ROX_HOST_SCANNING: true
       - ROX_DISCOVERED_AT_IMAGE: true
