Upgrade instead of add musl in main Dockerfile (#7011)

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -18,6 +18,8 @@ RUN apk update && \
     apk add --no-cache \
         ca-certificates \
         su-exec \
+        && \
+    apk add --no-cache --upgrade \
         musl \
         && \
     apk --purge del apk-tools \
