ROX-5914, ROX-6015: Integrate new Secured Cluster Helm Chart (#7003)
Use new stackrox-secured-cluster-services Helm chart for deployment bundles and in CI.

--- a/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
@@ -70,7 +70,7 @@ customize:
     podLabels: {} # dict
     podAnnotations: {} # dict
     envVars: {} # dict
-  "admission-control":
+  admission-control:
     labels: {} # dict
     annotations: {} # dict
     podLabels: {} # dict
