ROX-6016, ROX-6018, ROX-6019: Helm chart improvements (#7038)
Helm Chart Improvements

--- a/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
@@ -13,6 +13,12 @@ image:
   registry:
     main: null # string
     collector: null # string
+  pullPolicy:
+    main: null # string
+    collector: null # string
+  tag:
+    main: null # string
+    collector: null # string
 
 config:
   collectionMethod: null # string
@@ -30,5 +36,9 @@ config:
   createSecrets: null # bool
   offlineMode: null # bool
   slimCollector: null # bool
+  sensorResources: null # dict
+  admissionControlResources: null # dict
+  collectorResources: null # dict
+  complianceResources: null # dict
 
 envVars: null # [obj]
