--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -172,6 +172,7 @@ spec:
       serviceAccount: admission-control
       containers:
         - image: {{ printf "%s/%s:%s" ._rox.admissionControl.image.registry ._rox.admissionControl.image.name ._rox.admissionControl.image.tag }}
+          imagePullPolicy: {{ ._rox.admissionControl.image.pullPolicy }}
           name: admission-control
           readinessProbe:
             httpGet:
@@ -187,12 +188,7 @@ spec:
           command:
             - admission-control
           resources:
-            requests:
-              memory: "100Mi"
-              cpu: "50m"
-            limits:
-              memory: "500Mi"
-              cpu: "500m"
+            {{- ._rox.admissionControl._resources | nindent 12 }}
           securityContext:
             runAsNonRoot: true
             readOnlyRootFilesystem: true
