ROX-6017: Expose image pull secrets (#7039)
Expose subset of imagePullSecrets configuration, pick default pullPolicy for collector depending on slimMode and display warning in case slim mode is enabled and collector image tag is overridden

--- a/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
@@ -20,6 +20,15 @@ image:
     main: null # string
     collector: null # string
 
+imagePullSecrets:
+  useExisting: null # string | [string]
+
+mainImagePullSecrets:
+  useExisting: null # string | [string]
+
+collectorImagePullSecrets:
+  useExisting: null # string | [string]
+
 config:
   collectionMethod: null # string
   admissionControl:
