--- a/image/templates/helm/stackrox-secured-cluster/templates/sensor.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/sensor.yaml
@@ -66,7 +66,9 @@ spec:
         fsGroup: 4000
       {{- if not ._rox.env.openshift }}
       imagePullSecrets:
-        - name: stackrox
+      {{- range $secretName := ._rox.mainImagePullSecrets._names }}
+      - name: {{ quote $secretName }}
+      {{- end }}
       {{- end }}
       serviceAccount: sensor
       containers:
