--- a/image/templates/helm/stackrox-secured-cluster/templates/upgrader-serviceaccount.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/upgrader-serviceaccount.yaml
@@ -11,7 +11,9 @@ metadata:
   annotations:
     {{- include "srox.annotations" (list . "serviceaccount" "sensor-upgrader") | nindent 4 }}
 imagePullSecrets:
-- name: stackrox
+{{- range $secretName := ._rox.mainImagePullSecrets._names }}
+- name: {{ quote $secretName }}
+{{- end }}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
