ROX-5880: Support monitoring endpoint exposure in new Helm Chart (#7040)
Support for exposing monitoring endpoint for sensor, collector and admission-control

--- a/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/compatibility-config-shape.yaml
@@ -49,5 +49,6 @@ config:
   admissionControlResources: null # dict
   collectorResources: null # dict
   complianceResources: null # dict
+  exposeMonitoring: null # bool
 
 envVars: null # [obj]
