--- a/image/templates/helm/stackrox-secured-cluster/templates/sensor-netpol.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/sensor-netpol.yaml
@@ -51,3 +51,26 @@ spec:
       app: collector
   policyTypes:
     - Ingress
+{{ if ._rox.sensor.exposeMonitoring }}
+---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: sensor-monitoring
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "srox.labels" (list . "networkpolicy" "sensor-monitoring") | nindent 4 }}
+    auto-upgrade.stackrox.io/component: "sensor"
+  annotations:
+    {{- include "srox.annotations" (list . "networkpolicy" "sensor-monitoring") | nindent 4 }}
+spec:
+  ingress:
+  - ports:
+    - port: 9090
+      protocol: TCP
+  podSelector:
+    matchLabels:
+      app: sensor
+  policyTypes:
+    - Ingress
+{{ end }}
