ROX-6112: Tests and fixes for new secured-cluster-services Helm chart (#7074)
Add base and customization tests for new secured-cluster-services Helm chart + some metadata related fixes for chart

--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -145,8 +145,10 @@ spec:
       namespace: {{ .Release.Namespace }}
       labels:
         app: admission-control
+        {{- include "srox.podLabels" (list . "deployment" "admission-control") | nindent 8 }}
       annotations:
         traffic.sidecar.istio.io/excludeInboundPorts: "8443"
+        {{- include "srox.podAnnotations" (list . "deployment" "admission-control") | nindent 8 }}
     spec:
       # Attempt to schedule these on master nodes
       affinity:
