--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -312,6 +312,8 @@ webhooks:
           - replicationcontrollers
           - statefulsets
           - daemonsets
+          - cronjobs
+          - jobs
           {{- if ._rox.env.openshift }}
           - deploymentconfigs
           {{- end }}
