--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3661,9 +3661,12 @@ jobs:
             roxctl -e "${API_ENDPOINT}" -p "${ROX_PASSWORD}" central db backup --output rocksdb-44-backup.zip
 
       - run:
-          name: Set Central image to current SHA
+          name: Set Central + Scanner images to most recent commit
           command: |
             kubectl -n stackrox set image deploy/central "central=stackrox/main:$(make --quiet tag)"
+            kubectl -n stackrox set image deploy/scanner "scanner=stackrox/scanner:$(cat SCANNER_VERSION)"
+            kubectl -n stackrox set image deploy/scanner-db "*=stackrox/scanner-db:$(cat SCANNER_VERSION)"
+
       - *waitForAPI
       - validate-upgrade:
           upgrade-cluster-id: "ff725187-e4f3-4d10-b5bd-021fc19bf108"
