--- a/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/02-scanner-06-deployment.yaml
@@ -120,7 +120,7 @@ spec:
           readOnly: true
         - name: scanner-db-password
           mountPath: /run/secrets/stackrox.io/secrets
-      serviceAccount: scanner
+      serviceAccountName: scanner
       volumes:
       - name: additional-ca-volume
         secret:
@@ -247,7 +247,7 @@ spec:
             mountPath: /run/secrets/stackrox.io/certs
           - name: scanner-db-password
             mountPath: /run/secrets/stackrox.io/secrets
-      serviceAccount: scanner
+      serviceAccountName: scanner
       securityContext:
         fsGroup: 70
       volumes:
