--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     //JavaMail for mail verifications
     compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
 
+    //Slack API
+    compile group: 'com.slack.api', name: 'slack-api-client', version: '1.5.0-M1'
+
     // JAX-B dependencies for JDK 9+
     implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
     implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"
