Add helm dev guideline (#7083)
Add helm dev guideline

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ combined_coverage.dat
 .idea/
 /vendor/
 /.gradle/
+/stackrox-central-services-chart/
+/stackrox-secured-cluster-services-chart/
 
 # Mac OS hidden file
 .DS_Store
