--- a/image/templates/helm/stackrox-central/templates/01-central-12-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-12-deployment.yaml
@@ -89,6 +89,10 @@ spec:
             drop: ["NET_RAW"]
           readOnlyRootFilesystem: true
         env:
+        - name: ROX_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: ROX_INIT_TELEMETRY_ENABLED
           value: {{ ._rox.central.disableTelemetry | not | quote }}
         - name: ROX_OFFLINE_MODE
