--- a/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
+++ b/roxctl/helm/derivelocalvalues/testdata/k8s-resources/offlineMode-internalRegistry-nodePortExposure-scannerDisabled.yaml
@@ -881,6 +881,10 @@ spec:
             drop: ["NET_RAW"]
           readOnlyRootFilesystem: true
         env:
+        - name: ROX_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         - name: ROX_INIT_TELEMETRY_ENABLED
           value: "true"
         - name: ROX_OFFLINE_MODE
